--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/Petmoose26/Online-Offline-Budget-Tracker/issues"
   },
-  "homepage": "https://petmoose26.github.io/Online-Offline_budget_tracker#readme",
+  "homepage": "https://Petmoose26.github.io/Online-Offline_budget_tracker#readme",
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
